# llm_translator_srt

./: .gitignore  README.md  example.ipynb
translator/: .env.example  README.md  changelog.md  pyproject.toml
translator/srt/: example.srt  example_chi.srt
translator/tests/: test_chain.py
translator/translator/: chain.py  example.py
